# LiteFetch_API_Client

./: .gitignore  LICENSE  LICENSE-COMMERCIAL.md  LICENSE-PERSONAL.md  pyproject.toml  readme.md  run.sh
.github/: CODEOWNERS
.github/workflows/: tauri-build.yml
backend/: build_sidecar.sh  run.py
backend/app/: api.py  main.py  models.py
backend/app/core/: crypto.py  engine.py  secret_codec.py  secret_transformers.py  storage.py
backend/tests/: test_crypto_master.py  test_secret_transformers.py
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: main.rs
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/cookies/: CookieManager.tsx
frontend/src/components/environment/: EnvironmentPanel.tsx
frontend/src/components/history/: HistoryDrawer.tsx
frontend/src/components/import/: ImportPostmanButton.tsx
frontend/src/hooks/: useCollectionData.ts  useCollectionsIndex.ts  useCookies.ts  useEnvironmentData.ts  useHotkeys.ts  useLastResults.ts  useRequestGuard.ts  useUiState.ts  useWorkspace.ts  useWorkspaceManager.ts
frontend/src/lib/: api.ts  postmanImport.ts
frontend/src/providers/: WorkspaceRuntimeProvider.tsx
frontend/src/stores/: useActiveCollectionStore.ts  useActiveRequestStore.ts  useRequestRevisionStore.ts  useRunSettingsStore.ts  useWorkspaceLockStore.ts
scripts/: build-desktop.sh  set-desktop-version.sh
(+43 files in other folders)
