[tool.poetry]
name = "litefetch"
version = "0.1.0"
description = "Lightweight, Local-First API Client"
authors = ["Jordan <jordan@jtechminds.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = "^0.26.0"
pydantic = "^2.6.0"
jmespath = "^1.0.1"
aiofiles = "^23.2.0"
cryptography = "^43.0.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
