[package]
name = "litefetch-desktop"
version = "0.1.0"
description = "LiteFetch desktop shell (Tauri 2)"
authors = ["Jordan Gonzales (JTech Minds)"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[profile.release]
opt-level = "s"
